--- a/property-app/package.json
+++ b/property-app/package.json
@@ -16,12 +16,15 @@
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@fullcalendar/vue3": "^6.1.8",
+    "@vee-validate/zod": "^4.12.8",
     "axios": "^1.6.8",
     "chart.js": "^4.3.0",
+    "jwt-decode": "^4.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.49.1",
     "quill": "^2.0.2",
+    "vee-validate": "^4.12.8",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
